<resources>
    <string name="app_name">TouchMe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_chat">Chat</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_connexion">ConnexionActivity</string>
    <string name="connexion_string">CONNEXION</string>
    <string name="email_hint_string">Adresse email</string>
    <string name="username_hint_string">Nom d\'utilisateur</string>
    <string name="password_hint_string">Mot de passe</string>
    <string name="log_in_button_string">Se connecter</string>
    <string name="sign_in_button_string">S\'inscrire</string>
    <string name="facebook_login_button_string">Se connecter avec Facebook</string>
    <string name="connexion_page_button_string">CONNEXION</string>
    <string name="inscription_string">INSCRIPTION</string>
    <string name="facebook_app_id">1927295344162426</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="username_upper_label">PSEUDO :</string>
    <string name="age_upper_label">ÂGE   :</string>
    <string name="sex_upper_label">SEXE  :</string>
    <string name="email_upper_label">EMAIL  :</string>
    <string name="disconnect_label">se déconnecter</string>
    <string name="title_activity_edit_profil">EditProfilActivity</string>
    <string name="or_label">OU</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_initial_user_informations">InitialUserInformationsActivity</string>
    <string name="save_button_string">ENREGISTRER</string>
    <string name="shown_username_hint_string">Pseudonyme</string>
    <string name="age_label">DATE DE NAISSANCE</string>
    <string name="shown_username_label">PSEUDONYME</string>
    <string name="man_string">homme</string>
    <string name="woman_string">femme</string>
    <string name="title_activity_user_selfie">UserSelfieActivity</string>
    <string name="selfie_url_hint">url photo de profil (dév)</string>
    <string name="url_selfie_hint">url photo de profil</string>
</resources>
