<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_inscrit">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:background="@color/color_white_low_opacity"
                android:layout_alignParentEnd="false"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:id="@+id/show_username_layout"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/username_upper_label"
                    android:id="@+id/username_label"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/color_grey_dark"
                    android:textStyle="bold"
                    android:layout_alignParentStart="false"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/username_input"
                    android:hint="@string/username_hint_string"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentEnd="false"
                    android:textColor="@color/color_grey_dark"
                    android:background="@color/color_white"
                    android:textColorHint="@color/color_grey_dark"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/username_label" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/sex_radio_group"
                    android:layout_below="@+id/username_input">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/sex_upper_label"
                        android:id="@+id/sex_label"
                        android:layout_below="@+id/username_input"
                        android:layout_alignParentLeft="true"
                        android:textColor="@color/color_grey_dark"
                        android:textStyle="bold"
                        android:layout_alignParentStart="false"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/man_string"
                        android:id="@+id/man_radio_button"
                        android:layout_below="@+id/sex_label"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:checked="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/woman_string"
                        android:id="@+id/woman_radio_button"
                        android:layout_below="@+id/man_radio_button"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/age_label"
                    android:id="@+id/age_label"
                    android:layout_below="@+id/sex_radio_group"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/color_grey_dark"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp" />

                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/age_picker"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:calendarViewShown="false"
                    android:measureAllChildren="false"
                    android:layout_below="@+id/age_label"
                    android:layout_marginTop="0dp"
                    android:spinnersShown="true"
                    android:datePickerMode="spinner"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_button_string"
                    android:layout_below="@+id/age_picker"
                    android:background="@color/color_yellow"
                    android:padding="10dp"
                    android:textColor="@color/color_grey_dark"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
