<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/map_layout">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ui_rl_menu" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        android:background="@color/color_white_low_opacity"
        android:id="@+id/parameters_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/age_upper_label"
            android:id="@+id/textView"
            android:textColor="@color/color_grey_dark" />


        <LinearLayout
            android:id="@+id/seekbar_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sex_upper_label"
            android:id="@+id/textView2"
            android:layout_below="@+id/seekbar_custom"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_grey_dark" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man_string"
            android:id="@+id/man_checkbox"
            android:layout_below="@+id/textView2"
            android:textColor="@color/color_grey_dark" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman_string"
            android:id="@+id/woman_checkbox"
            android:layout_below="@+id/man_checkbox"
            android:layout_alignLeft="@+id/man_checkbox"
            android:layout_alignStart="@+id/man_checkbox"
            android:textColor="@color/color_grey_dark" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/parameters_button"
        android:background="@color/color_grey_dark"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:onClick="showParametersLayout">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageView"
            android:src="@drawable/searc_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@id/ui_rl_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    </RelativeLayout>
</RelativeLayout>
