<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_centerHorizontal="true">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/user_profil_selfie"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/silhouette"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/username_upper_label"
                android:layout_below="@+id/user_profil_selfie"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/username_label"/>

            <TextEdit
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@+id/username_label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:text="username"
                android:id="@+id/username" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email_upper_label"
                android:layout_below="@+id/username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:id="@+id/email_label"/>

            <TextEdit
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@+id/email_label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:text="email@mail.com"
                android:id="@+id/email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/age_upper_label"
                android:id="@+id/age_label"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <TextEdit
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="XX ans"
                android:id="@+id/age"
                android:layout_below="@+id/age_label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sex_upper_label"
                android:id="@+id/sex_label"
                android:layout_below="@+id/age"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <TextEdit
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="homme"
                android:id="@+id/sex"
                android:layout_below="@+id/sex_label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>